--- a/shop.html
+++ b/shop.html
@@ -46,10 +46,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav mr-auto">
-        <li><a class="nav-link" href="view.html">景點介紹</a></li>
-        <li><a class="nav-link" href="learn.html">線上學習平台</a></li>
-        <li><a class="nav-link" href="shop.html">商品</a></li>
-        <li><a class="nav-link" href="money.html">募款</a></li>
+        <li><a class="nav-link" href="shop.html">瀏覽商品</a></li>
         <li><a class="nav-link" href="Clogin.php">登入</a></li>
       </ul>
     </div>
